Archive2/58/75d1053d36c172/output
main.cpp:5:8: error: parameter pack 'Indices' must be at the end of the template parameter list
 struct tuple_impl // : tuple_element<Indices, Types>...
        ^
